--- a/templates/scheda_pai/index.html.twig
+++ b/templates/scheda_pai/index.html.twig
@@ -11,9 +11,9 @@
         <div class="col-md-2">
         <p class="h6">Schede per pagina</p>
         <select class=" d-inline form-select" name='filtro_numero_schede' onchange="this.form.submit()">
-                <option {% if schede_per_pagina == 0 %}selected{% endif %} value=2>2</option>
-                <option {% if schede_per_pagina == 5%}selected{% endif %} value=5>5</option>
-                <option {% if schede_per_pagina == 10%}selected{% endif %} value=10>10</option>
+                <option {% if schede_per_pagina == 0 %}selected{% endif %} value=10>10</option>
+                <option {% if schede_per_pagina == 20 %}selected{% endif %} value=20>20</option>
+                <option {% if schede_per_pagina == 50 %}selected{% endif %} value=50>50</option>
         </select>
         </div>
         <div class="col-md-2">
@@ -77,12 +77,65 @@
         {% for scheda_pai in scheda_pais %}
             <tr>
                 <td data-title='Id'>{{ scheda_pai.id }}</td>
-                <td data-title='Operatore Principale'>{{ scheda_pai.idOperatorePrincipale }}</td>
-                <td data-title='Operatore Secondario Inf'>{{ scheda_pai.idOperatoreSecondarioInf ? scheda_pai.idOperatoreSecondarioInf|default('Nessuno')|join(', ') : 'Nessuno' }}</td>
-                <td data-title='Operatore Secondario Tdr'>{{ scheda_pai.idOperatoreSecondarioTdr ? scheda_pai.idOperatoreSecondarioTdr|default('Nessuno')|join(', ') : 'Nessuno' }}</td>
-                <td data-title='Operatore Secondario Log'>{{ scheda_pai.idOperatoreSecondarioLog ? scheda_pai.idOperatoreSecondarioLog|default('Nessuno')|join(', ') : 'Nessuno' }}</td>
-                <td data-title='Operatore Secondario Asa'>{{ scheda_pai.idOperatoreSecondarioAsa ? scheda_pai.idOperatoreSecondarioAsa|default('Nessuno')|join(', ') : 'Nessuno' }}</td>
-                <td data-title='Operatore Secondario Oss'>{{ scheda_pai.idOperatoreSecondarioOss ? scheda_pai.idOperatoreSecondarioOss|default('Nessuno')|join(', ') : 'Nessuno' }}</td>
+                <td data-title='Operatore Principale'>
+                    {% if scheda_pai.idOperatorePrincipale == null %}
+                        Nessuno
+                    {% else %}
+                        {{ scheda_pai.idOperatorePrincipale.name}}
+                        {{ scheda_pai.idOperatorePrincipale.surname}}
+                        <br>
+                    {% endif %}
+                </td>
+                <td data-title='Operatore Secondario Inf'>
+                        {% if scheda_pai.idOperatoreSecondarioInf  is empty %}
+                                Nessuno
+                        {% endif %}
+                        {% for i in scheda_pai.idOperatoreSecondarioInf %}
+                            {{i.name}}
+                            {{i.surname}}  
+                            <br>
+                        {% endfor %} 
+                </td>
+                <td data-title='Operatore Secondario Tdr'>
+                {% if scheda_pai.idOperatoreSecondarioTdr  is empty %}
+                                Nessuno
+                        {% endif %}
+                        {% for i in scheda_pai.idOperatoreSecondarioTdr %}
+                            {{i.name}}
+                            {{i.surname}}  
+                            <br>
+                        {% endfor %}
+                </td>
+                <td data-title='Operatore Secondario Log'>
+                {% if scheda_pai.idOperatoreSecondarioLog  is empty %}
+                                Nessuno
+                        {% endif %}
+                        {% for i in scheda_pai.idOperatoreSecondarioLog %}
+                            {{i.name}}
+                            {{i.surname}}  
+                            <br>
+                        {% endfor %}
+                </td>
+                <td data-title='Operatore Secondario Asa'>
+                {% if scheda_pai.idOperatoreSecondarioAsa  is empty %}
+                                Nessuno
+                        {% endif %}
+                        {% for i in scheda_pai.idOperatoreSecondarioAsa %}
+                            {{i.name}}
+                            {{i.surname}}  
+                            <br>
+                        {% endfor %}
+                </td>
+                <td data-title='Operatore Secondario Oss'>
+                {% if scheda_pai.idOperatoreSecondarioOss  is empty %}
+                                Nessuno
+                        {% endif %}
+                        {% for i in scheda_pai.idOperatoreSecondarioOss %}
+                            {{i.name}}
+                            {{i.surname}}  
+                            <br>
+                        {% endfor %}
+                </td>
                 <td data-title='Assistito'>{{ scheda_pai.idAssistito }}</td>
                 <td data-title='Id Console'>{{ scheda_pai.idConsole }}</td>
                 <td data-title='Id Progetto'>{{ scheda_pai.idProgetto }}</td>
