--- a/templates/scheda_pai/show.html.twig
+++ b/templates/scheda_pai/show.html.twig
@@ -15,27 +15,68 @@
             </tr>
             <tr>
                 <th>Operatore Principale</th>
-                <td>{{ scheda_pai.idOperatorePrincipale }}</td>
+                <td>{% if scheda_pai.idOperatorePrincipale == null %}
+                        Nessuno
+                    {% else %}
+                        {{ scheda_pai.idOperatorePrincipale.name}}
+                        {{ scheda_pai.idOperatorePrincipale.surname}}
+                        <br>
+                    {% endif %}</td>
             </tr>
             <tr> 
                 <th>Operatore Secondario Inf</th>
-                <td>{{ scheda_pai.idOperatoreSecondarioInf ? scheda_pai.idOperatoreSecondarioInf|join(', ') : '' }}</td>
+                <td>{% if scheda_pai.idOperatoreSecondarioInf  is empty %}
+                                Nessuno
+                        {% endif %}
+                        {% for i in scheda_pai.idOperatoreSecondarioInf %}
+                            {{i.name}}
+                            {{i.surname}}  
+                            <br>
+                        {% endfor %} </td>
             </tr>
             <tr>
                 <th>Operatore Secondario Tdr</th>
-                <td>{{ scheda_pai.idOperatoreSecondarioTdr ? scheda_pai.idOperatoreSecondarioTdr|join(', ') : '' }}</td>
+                <td>{% if scheda_pai.idOperatoreSecondarioTdr is empty %}
+                                Nessuno
+                        {% endif %}
+                        {% for i in scheda_pai.idOperatoreSecondarioTdr %}
+                            {{i.name}}
+                            {{i.surname}}  
+                            <br>
+                        {% endfor %} </td>
             </tr>
             <tr>
                 <th>Operatore Secondario Log</th>
-                <td>{{ scheda_pai.idOperatoreSecondarioLog ? scheda_pai.idOperatoreSecondarioLog|join(', ') : '' }}</td>
+                <td>{% if scheda_pai.idOperatoreSecondarioLog  is empty %}
+                                Nessuno
+                        {% endif %}
+                        {% for i in scheda_pai.idOperatoreSecondarioLog %}
+                            {{i.name}}
+                            {{i.surname}}  
+                            <br>
+                        {% endfor %} </td>
             </tr>
             <tr>
                 <th>Operatore Secondario Asa</th>
-                <td>{{ scheda_pai.idOperatoreSecondarioAsa ? scheda_pai.idOperatoreSecondarioAsa|join(', ') : '' }}</td>
+                <td>{% if scheda_pai.idOperatoreSecondarioAsa  is empty %}
+                                Nessuno
+                        {% endif %}
+                        {% for i in scheda_pai.idOperatoreSecondarioAsa %}
+                            {{i.name}}
+                            {{i.surname}}  
+                            <br>
+                        {% endfor %} </td>
             </tr>
             <tr>
                 <th>Operatore Secondario Oss</th>
-                <td>{{ scheda_pai.idOperatoreSecondarioOss ? scheda_pai.idOperatoreSecondarioOss|join(', ') : '' }}</td>
+                <td>{% if scheda_pai.idOperatoreSecondarioOss  is empty %}
+                                Nessuno
+                        {% endif %}
+                        {% for i in scheda_pai.idOperatoreSecondarioOss %}
+                            {{i.name}}
+                            {{i.surname}}  
+                            <br>
+                        {% endfor %} </td>
             </tr>
             <tr>
                 <th>Assistito</th>
