--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -5,6 +5,7 @@ $primary: darken(#428bca, 20%);
 
 // the ~ allows you to reference things in node_modules
 @import "~bootstrap/scss/bootstrap";
+@import "~bootstrap-icons/font/bootstrap-icons.scss";
 
 label.required:after {
     content: " *";
@@ -59,3 +60,5 @@ label.required:after {
     */
     #no-more-tables td:before { content: attr(data-title); }
     }
+
+    
