--- a/templates/scheda_pai/index.html.twig
+++ b/templates/scheda_pai/index.html.twig
@@ -5,6 +5,12 @@
 {% block body %}
     <h1>Schede PAI</h1>
 
+<div class="container-fluid">
+    <a class="btn btn-primary btn-lg " href="{{ path('app_profilo') }}">Profilo
+        <swg class="bi bi-file-person"></swg>
+    </a> 
+</div>    
+
 <form action="{{ path('app_scheda_pai_index')}}" method="POST" id="my_form">
 <nav class="navbar navbar-expand bg-light">
     <div class="container-fluid">
@@ -146,12 +152,9 @@
                         Apri
                         </button>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="{{ path('app_scheda_pai_show', {'id': scheda_pai.id}) }}">Visualizza scheda Pai</a>
-                        <li><a class="dropdown-item" href="{{ path('app_scheda_pai_edit', {'id': scheda_pai.id}) }}">Modifica scheda Pai</a>
-                        <form method="post" action="{{ path('app_scheda_pai_delete', {'id': scheda_pai.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
-                        <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ scheda_pai.id) }}">
-                        <li><a class="dropdown-item" href="{{ path('app_scheda_pai_delete', {'id': scheda_pai.id}) }}">Elimina scheda Pai</a>
-                        </form>
+                        <li><a class="dropdown-item" href="{{ path('app_scheda_pai_show', {'id': scheda_pai.id}) }}">Visualizza scheda Pai</a></li>
+                        <li><a class="dropdown-item" href="{{ path('app_scheda_pai_edit', {'id': scheda_pai.id}) }}">Modifica scheda Pai</a></li>
+                        <li><a class="dropdown-item" href="{{ path('app_scheda_pai_delete', {'id': scheda_pai.id, '_token':  csrf_token('delete' ~ scheda_pai.id) }) }}"onclick="return confirm('Sei sicuro di voler eliminare la scheda?')">Elimina scheda Pai</a></li>
                         <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item {% if scheda_pai.currentPlace != 'approvata' %}disabled{% endif %}" href="{{ path('app_valutazione_generale_new', {'id_pai': scheda_pai.id})}}">Valutazione Generale</a></li>
                         <li><a class="dropdown-item {% if scheda_pai.currentPlace != 'attiva' %}disabled{% endif %}" href="{{ path('app_valutazione_figura_professionale_new', {'id_pai': scheda_pai.id})}}">Valutazione Figura Professionale</a></li>
@@ -176,6 +179,7 @@
         </tbody>
     </table>
 </div>
+
 </form>
 
     <a class="btn btn-primary" href="{{ path('app_scheda_pai_new') }}">Nuova scheda</a>
@@ -194,5 +198,6 @@
       <li class="page-item"><a class="page-link {% if pagina==pagine_totali %}disabled{% endif %}" href="javascript:void(0)" onclick="document.getElementById('my_form').action = '{{ path('app_scheda_pai_index', {'page':pagine_totali}) }}'; document.getElementById('my_form').submit();">>></a></li>
   </ul>
 </nav>
+
 {% endblock %}
 
