mailer non funzionante

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -39,4 +39,9 @@
         Sign in
     </button>
 </form>
+
+<div class="mb-3">
+    Hai dimenticato la password? Richiedine una nuova
+    <a class="btn btn-link" href="{{ path('app_forgot_password_request') }}">Reset password</a>
+</div>
 {% endblock %}
