--- a/templates/Profilo/editPassword.html.twig
+++ b/templates/Profilo/editPassword.html.twig
@@ -5,6 +5,21 @@
 {% block body %}
     <h1>Modifica Password</h1>
 
-    {{ include('Profilo/_formPassword.html.twig', {'button_label': 'Salva'}) }}
+<form action="{{ path('app_profilo_password' , {'id': user.id})}}" method="POST" id="my_form">
+ <div class="mb-3 row">
+    <label for="inputPassword" class="col-sm-2 col-form-label" >Password nuova</label>
+    <div class="col-sm-10">
+      <input type="password" class="form-control" id="inputPassword1" name='password_nuova'>
+    </div>
+  </div>
+   <div class="mb-3 row">
+    <label for="inputPassword" class="col-sm-2 col-form-label" > Conferma Password</label>
+    <div class="col-sm-10">
+      <input type="password" class="form-control" id="inputPassword2" name='conferma_password'>
+    </div>
+  </div>
+
+  <button class="btn btn-primary">{{ button_label|default('Salva') }}</button>
    <a class="btn btn-danger" href="{{ path('app_profilo_show') }}">Annulla</a>
+   
 {% endblock %}
