--- a/templates/reset_password/errore.html.twig
+++ b/templates/reset_password/errore.html.twig
@@ -2,6 +2,9 @@
 
 {% block title %}ErrorMailer{% endblock %}
 
+{% block header %}
+{% endblock %}
+
 {% block body %}
     <h1>Qualcosa non ha funzionato</h1>
         <p>Riprova più tardi </p>
@@ -9,4 +12,6 @@
 
 
 
+{% endblock %}
+{% block foot %}
 {% endblock %}
