--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Reset your password{% endblock %}
-
+{% block header %}{% endblock %}
 {% block body %}
     <h1>Reset your password</h1>
 
@@ -9,4 +9,6 @@
         {{ form_row(resetForm.plainPassword) }}
         <button class="btn btn-primary">Reset password</button>
     {{ form_end(resetForm) }}
+{% endblock %}
+{% block foot %}
 {% endblock %}
