--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -2,7 +2,8 @@
 {% extends 'base.html.twig' %}
 
 {# ... #}
-
+{% block header %}
+{% endblock %}
 {% block body %}
     {% if error %}
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
