visualizzazione completa html

--- a/templates/barthel/show.html.twig
+++ b/templates/barthel/show.html.twig
@@ -5,81 +5,7 @@
 {% block body %}
     <h1>Barthel</h1>
 
-<div id="no-more-tables">
-    <table class="col-sm-12  table-striped table-condensed cf">
-        <thead class="cf">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ barthel.id }}</td>
-            </tr>
-            <tr>
-                <th>Nome</th>
-                <td>{{ barthel.nome }}</td>
-            </tr>
-            <tr>
-                <th>Data di valutazione</th>
-                <td>{{ barthel.dataValutazione ? barthel.dataValutazione|date('Y-m-d') : '' }}</td>
-            </tr>
-            <tr>
-                <th>Alimentazione</th>
-                <td>{{ barthel.alimentazione }}</td>
-            </tr>
-            <tr>
-                <th>Bagno Doccia</th>
-                <td>{{ barthel.bagnoDoccia }}</td>
-            </tr>
-            <tr>
-                <th>Igiene Personale</th>
-                <td>{{ barthel.igienePersonale }}</td>
-            </tr>
-            <tr>
-                <th>Abbigliamento</th>
-                <td>{{ barthel.abbigliamento }}</td>
-            </tr>
-            <tr>
-                <th>Continenza Intestinale</th>
-                <td>{{ barthel.continenzaIntestinale }}</td>
-            </tr>
-            <tr>
-                <th>Continenza Urinaria</th>
-                <td>{{ barthel.continenzaUrinaria }}</td>
-            </tr>
-            <tr>
-                <th>Toilet</th>
-                <td>{{ barthel.toilet }}</td>
-            </tr>
-            <tr>
-                <th>Totale Valutazione Funzionale</th>
-                <td>{{ barthel.totaleValutazioneFunzionale }}</td>
-            </tr>
-            <tr>
-                <th>Trasferimento Letto Sedia</th>
-                <td>{{ barthel.trasferimentoLettoSedia }}</td>
-            </tr>
-            <tr>
-                <th>Scale</th>
-                <td>{{ barthel.scale }}</td>
-            </tr>
-            <tr>
-                <th>Deambulazione</th>
-                <td>{{ barthel.deambulazione ? 'Si' : 'No' }}</td>
-            </tr>
-            <tr>
-                <th>DeambulazioneValida</th>
-                <td>{{ barthel.deambulazioneValida }}</td>
-            </tr>
-            <tr>
-                <th>Uso Carrozzina</th>
-                <td>{{ barthel.usoCarrozzina }}</td>
-            </tr>
-            <tr>
-                <th>Totale</th>
-                <td>{{ barthel.totale }}</td>
-            </tr>
-        </tbody>
-    </table>
-</div>
+    {{ include('campi_barthel.html.twig') }}
 
     <a class="btn btn-primary" href="{{ path('app_barthel_index') }}">Torna alla lista</a>
 
