--- a/templates/valutazione_figura_professionale/show.html.twig
+++ b/templates/valutazione_figura_professionale/show.html.twig
@@ -4,47 +4,7 @@
 
 {% block body %}
     <h1>Valutazione Figura Professionale</h1>
-
-<div id="no-more-tables">
-    <table class="col-sm-12  table-striped table-condensed cf">
-        <thead class="cf">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ valutazione_figura_professionale.id }}</td>
-            </tr>
-            <tr>
-                <th>Nome</th>
-                <td>{{ valutazione_figura_professionale.nome }}</td>
-            </tr>
-            <tr>
-                <th>Tipo di operatore</th>
-                <td>{{ valutazione_figura_professionale.tipoOperatore }}</td>
-            </tr>
-            <tr>
-                <th>Diagnosi Professionale</th>
-                <td>{{ valutazione_figura_professionale.diagnosiProfessionale }}</td>
-            </tr>
-            <tr>
-                <th>Obbiettivi da raggiungere</th>
-                <td>{{ valutazione_figura_professionale.obbiettiviDaRaggiungere }}</td>
-            </tr>
-            <tr>
-                <th>Tipo e frequenza</th>
-                <td>{{ valutazione_figura_professionale.tipoEFrequenza }}</td>
-            </tr>
-            <tr>
-                <th>Modalità e tempi di monitoraggio degli obbiettivi</th>
-                <td>{{ valutazione_figura_professionale.modalitaTempiMonitoraggio }}</td>
-            </tr>
-            <tr>
-                <th>Data di valutazione</th>
-                <td>{{ valutazione_figura_professionale.dataValutazione ? valutazione_figura_professionale.dataValutazione|date('Y-m-d') : '' }}</td>
-            </tr>
-        </tbody>
-    </table>
-</div>
-
+    {{ include('campi_valutazione_figura_professionale.html.twig') }}
     <a class="btn btn-primary" href="{{ path('app_valutazione_figura_professionale_index') }}">Torna alla lista</a>
 
     <a class="btn btn-primary" href="{{ path('app_valutazione_figura_professionale_edit', {'id': valutazione_figura_professionale.id}) }}">Modifica</a>
